kubernetes/jus-potatoes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jus-potatoes-app-service
spec:
  selector:
    app: jus-potatoes-app
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 80
