kubernetes/jus-potatoes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jus-potatoes-app-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /dashboard
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jus-potatoes-app-service
            port:
              number: 8088
